Agregando archivos de la sesión en vivo 16

--- a/Sesion-16/Bedutravels/tours/templates/tours/index.html
+++ b/Sesion-16/Bedutravels/tours/templates/tours/index.html
@@ -15,8 +15,13 @@
           <strong>BEDUTRAVELS</strong>
         </a>
         <div>
-          <a href="">LogIn</a>
+	  {% if user %}
+	  <a href="/perfiles">{{ user.username }}</a>
+          <a href="/logout">Salir</a>
+	  {% else %}
+          <a href="/login">Entrar</a>
           <a href="">SignIn</a>
+	  {% endif %}
         </div>
     </nav>
 
